Networking/Tasks_v2/odoo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-app
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
        - name: odoo
          image: docker.io/bitnami/odoo:16
          ports:
            - containerPort: 8069
          volumeMounts:
            - name: odoo-data
              mountPath: /bitnami/odoo
      volumes:
        - name: odoo-data
          emptyDir: {}
